# physics_calc

./: .gitignore  CMakeLists.txt  OOP_DESIGN.md  README.md
src/: main.cpp
src/core/: Calculator.cpp  Calculator.h  Dimensions.cpp  Dimensions.h  Exceptions.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Quantity.h  Units.cpp  Units.h
src/ui/: MainWindow.cpp  MainWindow.h
